--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -150,6 +150,7 @@
   p {
     @apply text-light-100;
   }
+  
   h2 {
     @apply text-3xl font-semibold ;
     ;
@@ -163,6 +164,8 @@
   li {
     @apply text-light-100;
   }
+
+  
 }
 
 @layer components { 
@@ -182,7 +185,7 @@
     @apply flex min-h-14 w-full items-center justify-center gap-1.5 rounded-md;
   }
   .btn-primary {
-    @apply w-fit !bg-primary-200 !text-dark-100 hover:!bg-primary-200/80 !rounded-full !font-bold px-5 cursor-pointer min-h-10;
+    @apply w-fit !bg-primary-200 !text-dark-100 hover:!bg-primary-200/80 !rounded-full !font-bold px-5 cursor-pointer min-h-10 sm:px-2;
   }
   .btn-secondary {
     @apply w-fit !bg-dark-200 !text-primary-200 hover:!bg-dark-200/80 !rounded-full !font-bold px-5 cursor-pointer min-h-10;
@@ -371,3 +374,20 @@
   animation: image-reveal 2s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 }
 
+@layer utilities {
+  /* Breakpoint extra small */
+  .xs\:max-w-\[320px\] {
+    max-width: 320px;
+  }
+  .xs\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+  .xs\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+  .xs\:mt-4 {
+    margin-top: 1rem;
+  }
+}
